# hive_mind

./: ARCHITECTURE_OVERVIEW.md  QUICKSTART_VLA.md  TEST_RESULTS.md  docker-compose.yml  pyproject.toml  start_soarm_system.sh
common/: checkpoint_manager.py
common/config/: base.py  loader.py
common/registry/: action.py
common/schemas/: action.py  perception.py  robot_state.py  task.py  versioning.py
common/utils/: gpu_utils.py
configs/: master_config.yaml  perception.yaml
docker/: Dockerfile
hardware/robot_configs/: soarm_100.yaml
hardware/ros_adapter/: CAMERA_SETUP.md  QUICKSTART_SOARM100.md  README_TESTING.md  SOARM_100_INTEGRATION.md  camera_publisher.py  config.yaml  converters.py  mock_pipeline.py  ros_node.py  safety_validator.py  start_camera.sh
hardware/ros_adapter/tests/: latency_utils.py  ros_mocks.py  rosbag_test.py  test_adapter_node.py  test_converters.py  test_robustness.py
notebooks/: .gitignore  01_local_vlm_test.ipynb  02_component_tests.ipynb
scripts/: check_generate_attr.py  demo_client.py  patch_notebook.py  set_instruction.py  test_e2e_mock.py  test_vla_inference.py  verify_vlm.py
services/action/: README_SCRIPTED.md  app.py  config.yaml  factory.py  policy.py  test_scripted.py  train.py
services/action/experts/: __init__.py  act_policy.py  base.py  diffusion_policy.py  pi0_policy.py
services/perception/: app.py  config.py  config.yaml  model.py  train.py
services/pipeline/: app.py  config.yaml  data_logger.py  orchestrator.py  replay_loader.py  server.py
services/task/: app.py  config.yaml  model.py  train.py
services/task/providers/: __init__.py  base.py  gemini.py  gr00t.py  openvla.py  paligemma.py
tests/: test_data_logging.py  test_safety_validator.py  test_schemas.py  test_vlm_stability.py
tools/: evaluator.py  log_analyzer.py  metrics.py
