[project]
name = "hive-mind"
version = "0.1.0"
description = "Modular Robot AI Stack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "typing>=3.10.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "uvicorn>=0.23.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "services"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

